@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-29T08:25:41Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 4 ],
-  "count_decinc" : [ -2, +4 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 3 ],
-  "uniques_decinc" : [ -1, +3 ]
+  "timestamp" : "2022-09-29T16:27:59Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 4 ],
+  "count_decinc" : [ -3, +4 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 3 ],
+  "uniques_decinc" : [ -2, +3 ]
 }
