@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-09-29T08:25:41Z",
+  "timestamp" : "2022-09-29T16:27:59Z",
   "count_outdated" : 546,
   "uniques_outdated" : 314,
-  "count" : 578,
-  "uniques" : 332,
+  "count" : 577,
+  "uniques" : 331,
   "clones" : [
     {
       "timestamp": "2022-09-15T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 3 ]
+      "count": 1,
+      "count_minmax": [ 1, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 3 ]
     },
     {
       "timestamp": "2022-09-16T00:00:00Z",
