@@ -1,11 +1,11 @@
 {
-  "count": 32,
-  "uniques": 4,
+  "count": 31,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-09-15T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-09-16T00:00:00Z",
