@@ -1,3 +1,11 @@
+2022-09-29T16:27:59Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3152981180
+* notice: last 14d: unq all: 3 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 314 546 / 332 578
+* notice: next accum: outdated-unq outdated-all / unq all: 314 546 / 331 577
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +3 +4 -2 -3 / 1 1
+* notice: removed / changed dates: [] / [2022-09-15]
+
 2022-09-29T08:25:41Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3149754380
 * notice: last 14d: unq all: 4 32
